--- a/src/app/components/challenges/leaderboard/leaderboard.html
+++ b/src/app/components/challenges/leaderboard/leaderboard.html
@@ -1,5 +1,5 @@
 <div class="leaderboard-container">
-  <h3><i class="bi bi-trophy"></i> Clasificación</h3>
+  <h3><i class="bi bi-trophy"></i> Clasificación (Menor score gana)</h3>
   
   <div class="table-responsive">
     <table>
