--- a/src/app/components/challenges/leaderboard/leaderboard.scss
+++ b/src/app/components/challenges/leaderboard/leaderboard.scss
@@ -150,15 +150,15 @@ $text-color: rgba(white, 0.85);
     margin-right: 0.5rem;
 
     &.gold {
-      color: #ffd700;
+      color: #d0fc0d;
     }
 
     &.silver {
-      color: #c0c0c0;
+      color: #b3adad;
     }
 
     &.bronze {
-      color: #cd7f32;
+      color: #a3611f;
     }
   }
 }
