--- a/src/app/components/shared/header/header.scss
+++ b/src/app/components/shared/header/header.scss
@@ -1,3 +1,5 @@
+@use "bootstrap/scss/bootstrap" as bs;
+
 $primary: #00f2fe;
 $primary-gradient: linear-gradient(135deg, #00f2fe 0%, #4facfe 100%);
 $secondary: #ff00ff;
