--- a/src/app/components/challenges/challenge-list/challenge-list.html
+++ b/src/app/components/challenges/challenge-list/challenge-list.html
@@ -20,8 +20,7 @@
     No hay retos disponibles con este filtro.
   </div>
 
-  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-    <div *ngFor="let challenge of filteredChallenges" class="col">
+  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4"> <div *ngFor="let challenge of filteredChallenges" class="col">
       <div class="card h-100 shadow-sm">
         <div class="card-body">
           <h5 class="card-title">
