all responsive finish

--- a/src/app/components/challenges/challenge-list/challenge-list.html
+++ b/src/app/components/challenges/challenge-list/challenge-list.html
@@ -32,7 +32,7 @@
               {{ challenge.title }}
             </span>
           </h5>
-          <p class="card-text text-truncate">{{ challenge.description }}</p>
+          <p class="card-text">{{ challenge.description }}</p>
           <ul class="list-group list-group-flush mb-3">
             <li class="list-group-item">
               <strong>Estado:</strong>
